syntax = "proto3";

package section06;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dev.da0hn.grpc.proto.section06";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message Accounts {
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 value = 1;
}

message DepositRequest {
  oneof request {
    int32 account_number = 1;
    Money money = 2;
  }
}

message TransferRequest {
  int32 from_account = 1;
  int32 to_account = 2;
  int32 amount = 3;
}

message TransferResponse {
  AccountBalance from_account = 1;
  AccountBalance to_account = 2;
  TransferStatus status = 3;
}

enum TransferStatus {
  REJECTED = 0;
  COMPLETED = 1;
}

service BankService {
  rpc GetAccountBalance (BalanceCheckRequest) returns (AccountBalance);

  rpc GetAllAccountsStream (google.protobuf.Empty) returns (stream AccountBalance);

  rpc GetAllAccounts (google.protobuf.Empty) returns (Accounts);

  rpc Withdraw (WithdrawRequest) returns (stream Money);

  rpc deposit (stream DepositRequest) returns (AccountBalance);

}

service TransferService {
  rpc Transfer (stream TransferRequest) returns (stream TransferResponse);
}
